--- a/labs/notebooks/non_linear_classifiers/exercise_3.ipynb
+++ b/labs/notebooks/non_linear_classifiers/exercise_3.ipynb
@@ -9,14 +9,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import lxmls.readers.sentiment_reader as srs\n",
     "from lxmls.deep_learning.utils import AmazonData\n",
+    "import torch\n",
     "corpus = srs.SentimentCorpus(\"books\")\n",
-    "data = AmazonData(corpus=corpus)"
+    "data = AmazonData(corpus=corpus)\n",
+    "\n",
+    "if (torch.cuda.is_available):\n",
+    "    device_type = \"cuda\"\n",
+    "    device = torch.device(device_type)"
    ]
   },
   {
@@ -29,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +46,6 @@
     "class PytorchLogLinear(Model):\n",
     "    \n",
     "    def __init__(self, **config):\n",
-    "        \n",
     "        # Initialize parameters\n",
     "        weight_shape = (config['input_size'], config['num_classes'])\n",
     "        # after Xavier Glorot et al\n",
@@ -96,6 +100,7 @@
     "        self.weight.grad.data.zero_()\n",
     "        self.bias.grad.data.zero_()\n",
     "        \n",
+    "        \n",
     "        return loss.data.numpy()"
    ]
   },
@@ -108,23 +113,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(1.00000e-02 *\n",
+       "       [[-5.1106,  2.0230, -1.0317,  ..., -4.8644,  2.1598, -3.1773],\n",
+       "        [ 1.8640, -2.7083,  7.6013,  ...,  2.5429, -2.7400,  3.5373]], device='cuda:0')"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "model = PytorchLogLinear(\n",
     "    input_size=corpus.nr_features,\n",
     "    num_classes=2, \n",
     "    learning_rate=0.05\n",
-    ")"
+    ")\n",
+    "model.weight.cuda()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'torch.nn' has no attribute 'cuda'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-65-f7f3b6f1e057>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[0;31m# Batch loop\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mbatch\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_batches\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'input'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0moutput\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'output'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0;31m# Prediction for this epoch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-57-a16e00e3fee7>\u001b[0m in \u001b[0;36mupdate\u001b[0;34m(self, input, output)\u001b[0m\n\u001b[1;32m     62\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgrad\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzero_\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     63\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 64\u001b[0;31m         \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcuda\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"cuda\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     65\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mloss\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnumpy\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'torch.nn' has no attribute 'cuda'"
+     ]
+    }
+   ],
    "source": [
+    "import time\n",
     "# Hyper-parameters\n",
     "num_epochs = 10\n",
     "batch_size = 30\n",
@@ -132,6 +165,8 @@
     "# Get batch iterators for train and test\n",
     "train_batches = data.batches('train', batch_size=batch_size)\n",
     "test_set = data.batches('test', batch_size=None)[0]\n",
+    "\n",
+    "start = time.time()\n",
     "\n",
     "# Epoch loop\n",
     "for epoch in range(num_epochs):\n",
@@ -147,27 +182,43 @@
     "    accuracy = 100*np.mean(hat_y == test_set['output'])\n",
     "\n",
     "    # Inform user\n",
-    "    print(\"Epoch %d: accuracy %2.2f %%\" % (epoch+1, accuracy))"
+    "    print(\"Epoch %d: accuracy %2.2f %%\" % (epoch+1, accuracy))\n",
+    "\n",
+    "print(\"\\n \" + str(time.time() - start) + \" seconds\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
